# SwitchBotler

./: .gitignore  .infisical.json  README.ja.md  README.md  index.html  lefthook.yml  mise.toml  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
design-system/: MASTER.md  brand.md
docs/business/: INDEX.md  model.md  overview.md
docs/development/: INDEX.md  architecture.md  i18n.md  roadmap.md  secrets.md  security.md  switchbot-api.md
docs/mockup/: README.md  detail.en.html  detail.html  index.en.html  index.html  onboarding.html  themes.html  tray.en.html  tray.html
scripts/: check-i18n-hardcode.mjs
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/switchbot/: client.rs  credentials.rs  error.rs  mapping.rs  mod.rs  signature.rs
src/components/: language-select.tsx  theme-segment.tsx  theme-toggle.tsx  view-header.tsx  view-state.tsx
src/data/: autostart.ts  capability.ts  connection.ts  hooks.ts  index.ts  ipc.ts  preferences.ts  source.ts  tauri-connection.ts  tauri-source.test.ts  tauri-source.ts  types.ts
src/i18n/: error.ts  i18n.test.ts  index.ts  resolve.test.ts  resolve.ts  tray-native-menu.test.ts  tray-native-menu.ts
src/mocks/: fixtures.ts  mock-source.ts
src/stores/: connection-store.ts  device-store.test.ts  device-store.ts  favorites-store.test.ts  favorites-store.ts  language-store.ts  (+5 more)
(+90 files in other folders)
