[package]
name = "botler"
version = "0.0.0"
description = "SwitchBotler — desktop app to control SwitchBot devices"
authors = ["Sho DOUHASHI"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "botler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
# トレイ常駐 / ポップアップ位置 / 二重起動防止（M4）。
tauri-plugin-store = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# SwitchBot API 通信。CI で openssl を避けるため rustls-tls を使う。
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# HMAC-SHA256 署名生成。
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
# nonce（UUID v4）。
uuid = { version = "1", features = ["v4"] }
# OS セキュアストレージ。既定 feature "v1" が Linux で pure-Rust zbus secret-service を含む（libdbus 不要）。
keyring = "4"

[dev-dependencies]
# 実 API 疎通の #[ignore] 統合テスト用（#[tokio::test]）。
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

